--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,19 +1,39 @@
----
-name: Deploy to CapRover
+name: Deploy to staging
+
+env:
+    CONTEXT_DIR: './'
+    IMAGE_NAME: ${{ github.repository }}
+    DOCKERFILE: Dockerfile
+    CAPROVER_APP: rmargar-website
+    DOCKER_REGISTRY: hub.docker.com
 
 on:
-  push:
-    branches:
-      - main
+    push:
+        branches:
+            - main
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - name: Deploy
-        uses: AlexxNB/caprover-action@v1
-        with:
-          server: 'https://captain.caprover.rmargar.net'
-          password: '${{ secrets.CAPROVER_PASSWORD }}'
-          appname: 'rmargar-website'
+    build-and-publish:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v1
+            - run: |
+                  echo "IMAGE_NAME_WITH_REGISTRY=$DOCKER_REGISTRY/$IMAGE_NAME" >> $GITHUB_ENV
+                  export IMAGE_NAME_WITH_REGISTRY=$DOCKER_REGISTRY/$IMAGE_NAME
+                  echo "FULL_IMAGE_NAME=$IMAGE_NAME_WITH_REGISTRY:$GITHUB_SHA-gitsha" >> $GITHUB_ENV
+            - name: Log in to the Container registry
+              uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+              with:
+                  registry: ${{ env.DOCKER_REGISTRY }}
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.DOCKER_PASSWORD }}
+            - name: Build and Push Release to DockerHub
+              shell: bash
+              run: ./build_and_push.sh
+            - name: Deploy to CapRover
+              uses: caprover/deploy-from-github@d76580d79952f6841c453bb3ed37ef452b19752c
+              with:
+                  server: ${{ secrets.CAPROVER_HOST }}
+                  app: ${{ env.CAPROVER_APP }}
+                  token: '${{ secrets.CAPROVER_APP_TOKEN }}'
+                  image: '${{ env.FULL_IMAGE_NAME }}'
