--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,11 +1,10 @@
-name: Deploy to staging
+name: Deploy to CapRover
 
 env:
     CONTEXT_DIR: './'
     IMAGE_NAME: ${{ github.repository }}
     DOCKERFILE: Dockerfile
     CAPROVER_APP: rmargar-website
-    DOCKER_REGISTRY: hub.docker.com
 
 on:
     push:
@@ -21,12 +20,12 @@ jobs:
                   echo "IMAGE_NAME_WITH_REGISTRY=$DOCKER_REGISTRY/$IMAGE_NAME" >> $GITHUB_ENV
                   export IMAGE_NAME_WITH_REGISTRY=$DOCKER_REGISTRY/$IMAGE_NAME
                   echo "FULL_IMAGE_NAME=$IMAGE_NAME_WITH_REGISTRY:$GITHUB_SHA-gitsha" >> $GITHUB_ENV
+            
             - name: Log in to the Container registry
               uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
               with:
-                  registry: ${{ env.DOCKER_REGISTRY }}
-                  username: ${{ github.actor }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }}
             - name: Build and Push Release to DockerHub
               shell: bash
               run: ./build_and_push.sh
