--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,7 +28,7 @@ jobs:
                 password: ${{ secrets.DOCKER_PASSWORD }}
             - name: Build and Push Release to DockerHub
               shell: bash
-              run: ./build_and_push.sh
+              run: ./.github/scripts/build.sh
             - name: Deploy to CapRover
               uses: caprover/deploy-from-github@d76580d79952f6841c453bb3ed37ef452b19752c
               with:
