trying to fix gha

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,7 @@ env:
     IMAGE_NAME: ${{ github.repository }}
     DOCKERFILE: Dockerfile
     CAPROVER_APP: rmargar-website
+    DOCKER_REGISTRY: hub.docker.com
 
 on:
     push:
