--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,6 @@ env:
     IMAGE_NAME: ${{ github.repository }}
     DOCKERFILE: Dockerfile
     CAPROVER_APP: rmargar-website
-    DOCKER_REGISTRY: hub.docker.com
 
 on:
     push:
@@ -18,8 +17,7 @@ jobs:
         steps:
             - uses: actions/checkout@v1
             - run: |
-                  echo "IMAGE_NAME_WITH_REGISTRY=$DOCKER_REGISTRY/$IMAGE_NAME" >> $GITHUB_ENV
-                  export IMAGE_NAME_WITH_REGISTRY=$DOCKER_REGISTRY/$IMAGE_NAME
+                  echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
                   echo "FULL_IMAGE_NAME=$IMAGE_NAME_WITH_REGISTRY:$(date +%s)" >> $GITHUB_ENV
             
             - name: Log in to the Container registry
