--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
             - uses: actions/checkout@v1
             - run: |
                   echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-                  echo "FULL_IMAGE_NAME=$IMAGE_NAME_WITH_REGISTRY:$(date +%s)" >> $GITHUB_ENV
+                  echo "FULL_IMAGE_NAME=$IMAGE_NAME:$(date +%s)" >> $GITHUB_ENV
             
             - name: Log in to the Container registry
               uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
