--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,5 +33,5 @@ jobs:
               with:
                   server: ${{ secrets.CAPROVER_HOST }}
                   app: ${{ env.CAPROVER_APP }}
-                  token: '${{ secrets.CAPROVER_APP_TOKEN }}'
+                  password: '${{ secrets.CAPROVER_APP_TOKEN }}'
                   image: '${{ env.FULL_IMAGE_NAME }}'
