Revert "correct flat"
This reverts commit cf8a7008de81be3496ea96ecc4b443bd5bb2660b.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,5 +33,5 @@ jobs:
               with:
                   server: ${{ secrets.CAPROVER_HOST }}
                   app: ${{ env.CAPROVER_APP }}
-                  password: '${{ secrets.CAPROVER_APP_TOKEN }}'
+                  token: '${{ secrets.CAPROVER_APP_TOKEN }}'
                   image: '${{ env.FULL_IMAGE_NAME }}'
