correct caprover action version

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,7 +29,7 @@ jobs:
               shell: bash
               run: .github/scripts/build_and_push.sh
             - name: Deploy to CapRover
-              uses: caprover/deploy-from-github@d76580d79952f6841c453bb3ed37ef452b19752c
+              uses: caprover/deploy-from-github@v1.1.2
               with:
                   server: ${{ secrets.CAPROVER_HOST }}
                   app: ${{ env.CAPROVER_APP }}
