--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,12 @@ services:
    ports:
      - 8000:8000
    env_file: .env
+ db:
+  image: postgres:14.1
+  command: [ "postgres", "-c", "log_statement=all", "-c", "log_destination=stderr" ]
+  environment:
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: postgres
+    POSTGRES_DB: postgres
+  ports:
+    - "5432:5432"
