--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,8 @@ jobs:
 
       - name: Run tests
         run: make test
+
+      - name: Code coverage
+        uses: codecov/codecov-action@v3
+        with:
+           verbose: true
